--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -240,8 +240,9 @@
   .social-links {
     a {
       svg {
-        width: 30px;
-        height: 30px;
+        width: 24px;
+        height: 24px;
+        color: gray;
       }
     }
   }
