--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -238,11 +238,19 @@
     }
   }
   .social-links {
+    a:nth-child(1) {
+      color: black;
+    }
+    a:nth-child(2) {
+      color: rgba(0, 0, 255, 0.754);
+    }
+    a:nth-child(3) {
+      color: rgb(255, 0, 106);
+    }
     a {
       svg {
-        width: 24px;
-        height: 24px;
-        color: gray;
+        width: 20px;
+        height: 20px;
       }
     }
   }
